--- a/express/public/css/homepage.css
+++ b/express/public/css/homepage.css
@@ -9,6 +9,7 @@
 .main_imagearea{
 	display: flex;
 	justify-content: center;
+	align-content: flex-start;
 	padding-top:60px;
 	width: 100%;
 	height: 100%;
